--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -38,8 +39,8 @@
 
     <header class="container mx-auto">
         <!-- bannar section  -->
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-10 p-6">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
                         It's good <br>
@@ -47,10 +48,12 @@
                         Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br>
                         Satisfaction To Your Taste Buds.</p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button
+                        class="uppercase font-bold btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore
+                        More <i class="fa-solid fa-arrow-trend-up"></i></button>
                 </div>
                 <div>
-                    <img src="images/banner.png" class="max-w-sm"/>
+                    <img src="images/banner.png" class="" />
                     <!-- rating badge  -->
                     <div class="flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-lg -mt-14">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -66,39 +69,41 @@
     <main class="container mx-auto">
         <section class="text-center my-24 p-6">
             <h3 class="text-5xl font-extrabold mb-5">Our Featured Products</h3>
-            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even slightly believable. </p>
             <!-- Featured Card Container -->
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <!-- card 1 -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#f4f4f4d9] shadow-xl">
                     <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="font-bold text-2xl">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="font-bold text-2xl">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <!-- card 2 -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#f4f4f4d9] shadow-xl">
                     <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="font-bold text-2xl">Black Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="font-bold text-2xl">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <!-- card 3 -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#f4f4f4d9] shadow-xl">
                     <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="font-bold text-2xl">Lemon Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="font-bold text-2xl">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <!-- card 4 -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#f4f4f4d9] shadow-xl">
                     <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="font-bold text-2xl">Green Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="font-bold text-2xl">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
 
@@ -119,7 +124,10 @@
             <div class="space-y-5 flex-1">
                 <h2 class="text-5xl font-extrabold">Great Tea, Freshly <br>
                     Presented</h2>
-                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
                 <h3 class="text-xl font-extrabold">Unique Taste</h3>
                 <p>A Unique and different style from other teapots gives a <br>
                     luxurious and minimalist impression</p>
@@ -128,9 +136,153 @@
                     durable when you use it.</p>
             </div>
         </section>
-    </main>
-    <footer>
+        <!-- Super Client section  -->
+        <section
+            class="my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] lg:py-24 p-6 flex flex-col lg:flex-row gap-12 justify-center items-center mx-4">
+            <div class="space-y-5 lg:pr-40 px-6">
+                <h2 class="text-5xl font-extrabold text-white">
+                    Meet Our Super <br>
+                    Clients
+                </h2>
+                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    slightly believable.</p>
+                <button
+                    class="uppercase font-bold btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Show
+                    All</button>
+            </div>
+            <!-- review container  -->
+            <div class="relative px-10">
+                <!-- Next review  -->
+                <div class="relative mb-16 opacity-40 z-10 p-10 rounded-lg bg-white">
+                    <img class="absolute -left-6 -top-6 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p class="text-[#777]">We are providing the best and suitable home insurance services for the people
+                        who are interested to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium text-[#777]">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Current review  -->
+                <div class="absolute top-40 lg:-left-32 z-20 lg:w-[433px] p-10 rounded-lg bg-white">
+                    <img class="absolute -left-6 -top-6 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p class="text-[#777]">We are providing the best and suitable home insurance services for the people
+                        who are interested to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium text-[#777]">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Previous review  -->
+                <div class="relative opacity-40 z-10 p-10 rounded-lg bg-white">
+                    <img class="absolute -left-6 -top-6 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p class="text-[#777]">We are providing the best and suitable home insurance services for the people
+                        who are interested to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium text-[#777]">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- News and Event Section  -->
+        <section class="my-24 p-6">
+            <div class="text-center">
+                <h2 class="text-5xl font-extrabold mb-5">News & Events</h2>
+                <p class="mb-12">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, <br> by injected humour, or randomised words which don't look even
+                    slightly believable. </p>
+            </div>
+            <!-- card section  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- card 1 -->
+                <div class="border-2 border-[#D2D2D2] space-y-3 p-4 rounded-xl">
+                    <img class="w-full" src="images/news-1.png" alt="">
+                    <p class="text-[#777]">Feb 05, 2027</p>
+                    <h4 class="text-xl font-bold">Collecting 8 points for <br> discount</h4>
+                    <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                    <h5 class="font-semibold">Learn More</h5>
+                </div>
+                <!-- card 2 -->
+                <div class="border-2 border-[#D2D2D2] space-y-3 p-4 rounded-xl">
+                    <img class="w-full" src="images/news-2.png" alt="">
+                    <p class="text-[#777]">Feb 05, 2027</p>
+                    <h4 class="text-xl font-bold">Collecting 8 points for <br> discount</h4>
+                    <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                    <h5 class="font-semibold">Learn More</h5>
+                </div>
+                <!-- card 3 -->
+                <div class="border-2 border-[#D2D2D2] space-y-3 p-4 rounded-xl">
+                    <img class="w-full" src="images/news-3.png" alt="">
+                    <p class="text-[#777]">Feb 05, 2027</p>
+                    <h4 class="text-xl font-bold">Collecting 8 points for <br> discount</h4>
+                    <p class="text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                    <h5 class="font-semibold">Learn More</h5>
+                </div>
 
+            </div>
+        </section>
+    </main>
+    <!-- footer section  -->
+    <footer class="lg:px-48 py-20 bg-[#FF00001A] text-base-content">
+        <div class="p-6 flex justify-between items-center pb-16">
+            <div>
+                <img src="images/cup.png" alt="">
+            </div>
+            <div class="flex gap-4 items-center">
+                <p>Ready to get strated?</p>
+                <button
+                    class=" uppercase font-bold btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get
+                    Started</button>
+            </div>
+        </div>
+        <div class="footer flex md:justify-between items-center flex-col md:flex-row justify-center">
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form class="text-center">
+                <div class="flex flex-col justify-center items-center">
+                    <header class="footer-title">Newsletter</header>
+                    <fieldset class="form-control w-80">
+                        <label class="label block">
+                            <span class="label-text">Enter your email address</span>
+                        </label>
+                        <div class="join block">
+                            <input type="text" placeholder="username@site.com"
+                                class="bg-transparent border-b-2 border-black outline-none py-4" />
+                            <button
+                                class="p-4 uppercase font-bold rounded-e-full ml-2 bg-gradient-to-r from-gradient-start to-gradient-end text-white"><i
+                                    class="fa-solid fa-angle-right"></i></button>
+                        </div>
+                    </fieldset>
+                </div>
+            </form>
+        </div>
+        <div class="footer footer-center p-4 text-base-content mt-10">
+            <aside>
+                <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+            </aside>
+        </div>
     </footer>
 
 </body>
